--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "umi-test",
-    "test:coverage": "umi-test --coverage"
+    "test:coverage": "umi-test --coverage",
+    "lint": "eslint --ext .js,.ts src"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
@@ -21,7 +22,10 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "antd": "^5.4.2",
+    "eslint": "^8.38.0",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.40"
