--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "antd": "^5.4.2",
     "eslint": "^8.38.0",
+    "qs": "^6.11.1",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.40"
