--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "src/**/*",
     "config/**/*",
     ".umirc.ts",
-    "typings.d.ts"
+    "typings.d.ts",
+    "config"
   ],
   "exclude": [
     "node_modules",
