--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "antd": "^5.4.2",
+    "babel-plugin-jsx-control-statements": "^4.1.2",
     "eslint": "^8.38.0",
     "qs": "^6.11.1",
     "react": "17.x",
     "react-dom": "17.x",
+    "tsx-control-statements": "^5.1.0",
     "umi": "^3.5.40"
   },
   "devDependencies": {
