--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     ]
   },
   "dependencies": {
-    "@ant-design/pro-layout": "^6.5.0",
+    "@ant-design/pro-layout": "^7.10.3",
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
-    "antd": "^5.4.2",
     "babel-plugin-jsx-control-statements": "^4.1.2",
     "eslint": "^8.38.0",
+    "jsencrypt": "^3.3.2",
+    "node-rsa": "^1.1.1",
     "qs": "^6.11.1",
     "react": "17.x",
     "react-dom": "17.x",
@@ -39,7 +40,9 @@
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.40",
+    "ant-design": "^1.0.0",
     "lint-staged": "^10.0.7",
+    "lodash": "^4.17.21",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
     "yorkie": "^2.0.0"
