--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "umi dev",
+    "start": "tlm & umi dev",
     "build": "umi build",
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
@@ -32,18 +32,28 @@
     "qs": "^6.11.1",
     "react": "17.x",
     "react-dom": "17.x",
+    "redux": "^4.2.1",
     "tsx-control-statements": "^5.1.0",
     "umi": "^3.5.40"
   },
   "devDependencies": {
+    "@qiniu/typed-less-modules": "^0.1.2",
+    "@types/lodash-es": "^4.17.7",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.40",
     "ant-design": "^1.0.0",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-plugin-lodash": "^3.3.4",
+    "eslint-plugin-lodash": "^7.4.0",
     "lint-staged": "^10.0.7",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
+    "nprogress": "^0.2.0",
     "prettier": "^2.2.0",
+    "react-placeholder": "^4.1.0",
     "typescript": "^4.1.2",
     "yorkie": "^2.0.0"
   }
