--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     ]
   },
   "dependencies": {
-    "@ant-design/pro-layout": "^7.10.3",
+    "@ant-design/icons": "^5.0.1",
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -37,6 +37,7 @@
     "umi": "^3.5.40"
   },
   "devDependencies": {
+    "@ant-design/pro-layout": "6.31.2",
     "@qiniu/typed-less-modules": "^0.1.2",
     "@types/lodash-es": "^4.17.7",
     "@types/nprogress": "^0.2.0",
@@ -44,7 +45,6 @@
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.40",
-    "ant-design": "^1.0.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-plugin-lodash": "^3.3.4",
     "eslint-plugin-lodash": "^7.4.0",
