--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage",
-    "lint": "eslint --ext .js,.ts src"
+    "lint": "eslint --ext .js,.ts src",
+    "analyze": "ANALYZE=1 umi dev",
+    "analyzeBuild": "ANALYZE=1 umi build"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
@@ -26,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "babel-plugin-jsx-control-statements": "^4.1.2",
+    "clean-webpack-plugin": "^4.0.0",
     "eslint": "^8.38.0",
     "jsencrypt": "^3.3.2",
     "node-rsa": "^1.1.1",
