--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "babel-plugin-jsx-control-statements": "^4.1.2",
+    "classnames": "^2.3.2",
     "clean-webpack-plugin": "^4.0.0",
+    "dayjs": "^1.11.7",
     "eslint": "^8.38.0",
     "jsencrypt": "^3.3.2",
     "node-rsa": "^1.1.1",
