--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "antd-img-crop": "^4.12.2",
         "classnames": "^2.3.2",
         "clean-webpack-plugin": "^4.0.0",
-        "dayjs": "^1.11.7",
+        "dayjs": "1.10.4",
         "eslint": "^8.38.0",
         "eslint-plugin-jsx-control-statements": "^3.0.0",
         "jsencrypt": "^3.3.2",
