--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "react-redux": "^8.0.5",
         "redux": "^4.2.1",
         "redux-thunk": "^2.4.2",
-        "socket.io-client": "^4.6.1",
+        "socket.io-client": "2.4.0",
         "tsx-control-statements": "^5.1.0",
         "umi": "^3.5.40"
     },
