--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "jsencrypt": "^3.3.2",
         "multi-download": "^4.0.0",
         "node-rsa": "^1.1.1",
+        "path-to-regexp": "^6.2.1",
         "qs": "^6.11.1",
         "react": "17.x",
         "react-dom": "17.x",
